@@ -1,10 +1,12 @@
 package ru.forsh.springsecuiritytest.rest;
 
 
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 import ru.forsh.springsecuiritytest.model.Developer;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
@@ -14,7 +16,7 @@ public class DeveloperRestControllerV1 {
                     new Developer(1L, "Nikolay", "Forsh"),
                     new Developer(2L, "Valeria", "Forsh"),
                     new Developer(3L, "Misha", "Forsh"))
-            .toList();
+            .collect(Collectors.toList());
 
 
     @GetMapping
@@ -23,6 +25,8 @@ public class DeveloperRestControllerV1 {
     }
 
     @GetMapping("/{id}")
+    @PreAuthorize("hasAuthority('developers:read')") // Здесь мы прописываем неообходимость перед выполнением метода
+    //проверять ауторити у клиента.
     public Developer getById(@PathVariable long id) {
         return developers.stream()
                 .filter(dev -> dev.getId() == id)
@@ -31,12 +35,14 @@ public class DeveloperRestControllerV1 {
     }
 
     @PostMapping
+    @PreAuthorize("hasAuthority('developers:write')")
     public Developer create(@RequestBody Developer developer) {
         developers.add(developer);
         return developer;
     }
 
     @DeleteMapping("/{id}")
+    @PreAuthorize("hasAuthority('developers:write')")
     public void delete(@PathVariable long id) {
         developers.removeIf(d -> d.getId().equals(id));
     }
